WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44942
REGRESSION (
r61921
): RTL text in <b> tag doesn't display in WebKit under certain conditions
https://bugs.webkit.org/show_bug.cgi?id=44942
Summary
REGRESSION (r61921): RTL text in <b> tag doesn't display in WebKit under cert...
Jeremy Moskovich
Reported
2010-08-31 04:34:20 PDT
One of the lines in the URL above (see attached screenshot) isn't displayed in WebKit, but shows up fine in FF & IE. Reduced testcase attached. Marking as a regression due to the fact this doesn't reproduce on Safari 5.0 on Windows, still need to test with older versions of Safari on Mac to be sure. Browsers tested: Safari 5.0 Windows: OK Safari 5.0.1/Mac : FAIL WebKit nightly (
r66356
): FAIL
Attachments
Screenshot
(258.51 KB, image/jpeg)
2010-08-31 04:36 PDT
,
Jeremy Moskovich
no flags
Details
Reduced test case
(1011 bytes, text/html)
2010-08-31 04:37 PDT
,
Jeremy Moskovich
no flags
Details
testcase reduced even further - minimal, I think.
(1.30 KB, text/html)
2010-08-31 05:03 PDT
,
Aharon (Vladimir) Lanin
no flags
Details
Still smaller (just less text).
(953 bytes, text/html)
2010-08-31 05:06 PDT
,
Aharon (Vladimir) Lanin
no flags
Details
Do not bail out if the explicit embedding sequence was a no-op
(20.51 KB, patch)
2011-02-02 20:03 PST
,
mitz
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Moskovich
Comment 1
2010-08-31 04:36:12 PDT
Created
attachment 66032
[details]
Screenshot
Jeremy Moskovich
Comment 2
2010-08-31 04:37:14 PDT
Created
attachment 66033
[details]
Reduced test case
Aharon (Vladimir) Lanin
Comment 3
2010-08-31 05:03:31 PDT
Created
attachment 66036
[details]
testcase reduced even further - minimal, I think. The <b> is not actually relevant - a <span> will do just as nicely. The table stuff and the RTL are necessary, however. A further-reduced test case attached, see comments inside.
Aharon (Vladimir) Lanin
Comment 4
2010-08-31 05:06:18 PDT
Created
attachment 66037
[details]
Still smaller (just less text).
mitz
Comment 5
2010-08-31 21:42:39 PDT
Regressed in <
http://trac.webkit.org/changeset/61921
>.
mitz
Comment 6
2010-08-31 21:43:28 PDT
<
rdar://problem/8380506
>
mitz
Comment 7
2011-02-02 20:03:42 PST
Created
attachment 81025
[details]
Do not bail out if the explicit embedding sequence was a no-op
mitz
Comment 8
2011-02-02 20:11:48 PST
Comment on
attachment 81025
[details]
Do not bail out if the explicit embedding sequence was a no-op Sam gave this an enthusiastic r+
mitz
Comment 9
2011-02-02 20:14:49 PST
Committed
r77461
.
http://trac.webkit.org/changeset/77461
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug