<rdar://problem/8380506> REGRESSION (r61921): RTL text in <b> tag doesn't display in WebKit under certain conditions https://bugs.webkit.org/show_bug.cgi?id=44942

Reviewed by Sam Weinig.

Source/WebCore:

Test: fast/text/bidi-embedding-pop-and-push-same-2.html

* platform/text/BidiResolver.h:
(WebCore::::commitExplicitEmbedding): Changed to return a boolean indicating whether there was
a change to embedding levels.
(WebCore::::createBidiRunsForLine): If embedding levels did not change as a result of committing
the explicit embedding sequence, then runs were not added, and we should continue normally.

LayoutTests:

* fast/text/bidi-embedding-pop-and-push-same-2-expected.checksum: Added.
* fast/text/bidi-embedding-pop-and-push-same-2-expected.png: Added.
* fast/text/bidi-embedding-pop-and-push-same-2-expected.txt: Added.
* fast/text/bidi-embedding-pop-and-push-same-2.html: Added.



Canonical link: https://commits.webkit.org/67544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77461 268f45cc-cd09-0410-ab3c-d52691b4dbfc